# csvql

./: README.md  csvql.py  pyproject.toml
