[tool.poetry]
name = "csvql"
version = "0.1.0"
description = "Query csv with sql"
authors = ["Paulo Cesar Cuneo <cuneo.paulo.cesar@gmail.com>"]

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
pandas = "^1.4.4"
duckdb = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
